k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edgemesh
  labels:
    name: edgemesh
    app.kubernetes.io/name: edgemesh
    app.kubernetes.io/component: control-plane
